--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
   },
